--- a/Átdolgozás - Vivi részei/stilus.css
+++ b/Átdolgozás - Vivi részei/stilus.css
@@ -500,3 +500,448 @@ transform:scale(0);
     
     
 }
+
+
+/*  vilagos modhoz Pfingstl Josef munkája*/
+
+:root{
+    --gombszin:#f9004d;
+    --betuszin:white;
+    --hatter1: #101010;
+    --hatter2:#191919;
+    --masodlagosbetu:#fcfc;
+    }
+    -vilagos
+    {
+        --gombszin:#2483F3;
+        --betuszin:black;
+        --hatter1: #E1EAF5;
+        --hatter2:white;
+        --shadow:#4F87CC;
+        --masodlagosbetu:#7AA9E3;
+    
+    }
+    /* Varga Tamás munkája*/
+    *{
+        padding:0;
+        margin: 0;
+        font-family: 'Josefin Sans', sans-serif;
+        box-sizing: border-box;
+    }
+    .hero{
+        height: 100vh;
+        width: 100%;
+        background-image:url(black-paper-background.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+    nav{
+         display: flex;
+         align-items: center;
+         justify-content: space-between;
+         padding-top: 45px ;
+         padding-left:  8%;
+         padding-right: 8%;
+    }
+    .logo{
+        color: var(--betuszin);
+        font-size: 35px;
+        letter-spacing: 1px;
+        cursor: pointer;
+    }
+    span{
+         color: var(--gombszin);
+    }
+    nav ul li {
+         list-style-type: none;
+         display: inline-block;
+         padding:  10px 25px;
+    }
+    nav ul li a{
+    
+         color: var(--betuszin);
+         text-decoration:  none;
+         font-weight: bold;
+         text-transform:  capitalize;
+    }
+    nav ul li a:hover{
+        color: var(--gombszin);
+        transition: .4s;
+    }
+    .btn{
+          background-color: var(--gombszin);
+          color: var(--betuszin);
+          text-decoration: none;
+          border: 2px solid transparent;
+          font-weight: bold;
+          padding: 10px 25px;
+          border-radius: 30px;
+          transition: transform .4s;
+          box-shadow: 0 2px 25px var(--shadow);
+    }
+    .btn:hover{
+        transform: scale(1.2);
+    }
+    .content{
+         position: absolute;
+         top:50%;
+         left: 8%;
+         transform: translateY(-50%);
+    }
+    h1 {
+        color:var(--betuszin);
+        margin: 20px 0px 20px;
+        font-size: 75px;
+    }
+    h3{
+        color:var(--betuszin);
+        font-size: 25px;
+        margin-bottom: 50px;
+    }
+    h4{
+        color:var(--masodlagosbetu);
+           letter-spacing: 2px;
+        font-size: 20px;
+    }
+    .newslatter form{
+     width: 380px;
+     max-width:  100%;
+     position: relative;
+    }
+    .newslatter form input:first-child{
+        display:inline-block;
+        width: 100%;
+        padding: 14px 130px 14px 15px;
+        border: 2px solid --gombszin;
+        outline: none;
+        border-radius: 30px;
+    }
+    .newslatter form input:last-child{
+        position: absolute;
+        display:  inline-block;
+        outline: none;
+        border: none;
+        padding: 10px 30px;
+        border-radius: 30px;
+        background-color: var(--gombszin);
+        color:  var(--betuszin);
+        box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
+        top: 6px;
+        right: 6px;
+    }
+    
+    
+    
+    
+    
+    /* Szigetvári Vivien Munkája */
+    
+    
+    
+    
+    
+    .rolunk{
+        width: 100%;
+        padding: 100px 0px;
+        background-color:var(--hatter2);
+    }
+    
+    .rolunk img{
+    height: auto;
+    width: 430px;
+    }
+    
+    .rolunk-szoveg{
+        width: 550px;
+       
+    
+    }
+    
+    .fooldal{
+    width: 1130px;
+    max-width:95% ;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 50px;
+    
+    }
+    
+    .rolunk-szoveg h2{
+        color:var(--betuszin);
+        font-size: 75px;
+        margin-bottom: 20px;
+        text-transform: capitalize;
+       
+    }
+    
+    .rolunk-szoveg h5{
+        color:var(--betuszin);
+        letter-spacing: 2px;
+        font-size: 22px;
+        margin-bottom: 25px;
+        text-transform: capitalize;
+       
+    }
+    
+    .rolunk-szoveg p{
+        color:#fcfc;
+        letter-spacing: 1px;
+        line-height: 28px;
+        font-size: 18px;
+        margin-bottom: 45px; 
+        justify-content: baseline;
+    }
+    
+    button{
+        background-color:var(--gombszin);
+        color:white;
+        text-decoration: none;
+        border: 2px solid transparent;
+        font-weight: bold;
+        padding: 13px 30px;
+        border-radius: 30px;
+        transition: .4s;
+        box-shadow: 0 2px 25px var(--shadow);
+    
+    }
+    
+    button:hover{
+        background-color: transparent;
+        border: 2px solid  --gombszin;
+        cursor: pointer;
+    }
+    
+    .szolgaltatasaink{
+        background-color: var(--hatter1);
+        width: 100%;
+        padding: 100px 0px;
+    }
+    
+    .szolgaltatascim h2{
+    color:var(--betuszin);
+    font-size: 75px;
+    width:1130px;
+    margin: 30px auto;
+    text-align: center;
+    }
+    
+    .doboz{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 400px;
+        
+    }
+    
+    
+    .kartya{
+        height: 365px;
+        width: 335px;
+        padding: 20px 35px;
+        background-color: var(--hatter2);
+        border-radius:20px ;
+        margin: 15px;
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+    
+    }
+    
+    .kartya i{
+        font-size: 50px;
+        display: block;
+        text-align: center;
+        margin: 25px 0px;
+        color:var(--gombszin);
+    }
+    
+    h5{
+        color: var(--betuszin);
+        font-size: 23px;
+        margin-bottom: 15px;
+    }
+    
+    .szolgaltataspra p{
+        font-size: 16px;
+        line-height: 27px;
+        margin-bottom: 25px;
+        color: var(--masodlagosbetu);
+    }
+    
+    .kartya .button{
+        background-color:var(--gombszin);
+        color:var(--betuszin);
+        text-decoration: none;
+        border: 2px solid transparent;
+        font-weight: bold;
+        padding: 9px 22px;
+        border-radius: 30px;
+        transition: .4s;
+        box-shadow: 0 2px 25px var(--shadow);
+    }
+    
+    .kartya .button:hover{
+        background-color: transparent;
+        border: 2px solid var(--gombszin);
+        cursor: pointer;
+    }
+    
+    
+    
+    
+    
+    
+    
+    /* Pfingstl Josef Munkája */
+    
+    
+    
+    .kapcsolatfelvetel{
+        width: 100%;
+        height: 290px;
+        background:var(--hatter2);
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--hatter1);
+    
+    }
+    .kapcsolatfelvetel p {
+    
+        color:var(--betuszin);
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 25px;
+    }
+    .kapcsolatfelvetel .gombketto{
+    
+        display: inline-block;
+        background-color: var(--gombszin);
+        color:var(--betuszin);
+        text-decoration: none;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        position: relative;
+        font-weight: bold;
+        padding:13px 30px;
+        border-radius: 30px;
+      
+        box-shadow: 0 2px 25px var(--shadow);
+        transition: box-shadow 0.25s;
+        z-index:2;
+    }
+    .kapcsolatfelvetel .gombketto:hover{
+    background-color: transparent;
+    border: 2px solid var(--gombszin);
+    
+    cursor: pointer;
+    }
+    .gombketto:active{
+        background-color: var(--gombszin);
+        box-lines: 0 2px 25px var(--shadow);
+    }
+    
+    .kapcsolat-felvetel .gombketto span {
+        background-color: var(--gombszin);
+        border:1px solif var(--gombszin);
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        position: absolute;
+        z-index:-1;
+        transform:scale(0) ;
+        }
+    
+    
+    
+    
+    footer{
+    position: relative;
+    width: 100%;
+    height: 400px;
+    background-color: var(--hatter2);
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+    
+    }
+    footer p:nth-child(1){
+    font-size:30px ;
+    color:var(--betuszin);
+    margin-bottom: 20px;
+    font-weight: bold;
+    }
+    footer p:nth-child(2){
+        color:var(--betuszin);
+        font-size: 17px;
+        width: 500px;
+        text-align: center;
+        line-height: 26px;
+    }
+    .elerhetosegek{
+        display:flex;
+    
+    
+    }
+    .elerhetosegek a{
+        width:45px ;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: var(--gombszin);
+        border-radius: 50%;
+        margin: 22px;
+        color:var(--betuszin);
+        text-decoration: none;
+        font-size: 20px;
+    }
+    .elerhetosegek a:hover{
+    transform: scale(1.3);
+    transition: .3s;
+    
+    }
+    .vege{
+        position: absolute;
+        color:var(--gombszin);
+        bottom: 35px;
+        font-size: 14px;
+    
+    }
+    .anim{
+        animation: moving 0.5s linear reverse forwards;
+    }
+    @keyframes moving{
+    
+        0%{
+    transform:scale(0);
+    
+        }
+        
+        10%{
+            transform:scale(1);
+            
+                }
+                
+        100%{
+            top:50%;
+            left:50%;
+            
+                }
+        
+        
+       
+        
+        
+    }
+
+    /* Sötét mód html-es megjelenítése és animáció Vivien munkája */
+
+    .icon{
+        width: 30px;
+        cursor: pointer;
+    }
