--- a/Josef müködő lightmode/stilus.css
+++ b/Josef müködő lightmode/stilus.css
@@ -9,6 +9,7 @@
     --hatter1: #101010;
     --hatter2:#191919;
     --masodlagosbetu:#fcfc;
+    --shadow:#f9004d;
     --kepforras:url(black-paper-background.jpg);
     }
 .vilagosmod
